# naseefmc

./: .gitignore  README.md
backend/: README.md  pyproject.toml
backend/app/: main.py
backend/app/api/routes/: jobs.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/models/: job.py
backend/app/schemas/: jobs.py  results.py
backend/app/services/: analytics.py  audio.py  detection.py  logger.py  pipeline.py  summarisation.py  transcription.py
backend/app/utils/: files.py
